Add validation rules to DTOs + refactor